# ImmunoSense

./: .gitignore  API_NOTES.md  ARCHITECTURE_DECISIONS.md  DEPLOY_NOTES.md  Procfile  SETUP.md  alembic.ini  apply.bat  build_dietary_caches.py  commit.bat  pyproject.toml  render.yaml  requirements.txt  run-api.bat  run-web.bat  test.bat  verify_api.py  verify_builders.py  verify_datalayer.py  verify_rename.py  verify_scheduler.py  verify_sprint3.py  verify_sprint5.py  verify_sprint6.py
immunosense/: __init__.py
immunosense/adapters/: __init__.py  adapter_registry.py  base.py  biomarker_adapter.py  dietary_adapter.py  environment_adapter.py  symptoms_mood_adapter.py  wearable_adapter.py
immunosense/agents/: __init__.py  base.py
immunosense/agents/biomarker/: __init__.py  agent.py  constants.py  synthetic.py  train.py  types.py
immunosense/agents/common/: __init__.py  anthropic_client.py  fdr.py  trackers.py
immunosense/agents/dietary/: __init__.py  agent.py  constants.py  density.py  detector.py  dii.py  layer1_train.py  matching.py  pipeline.py  trackers.py  triggers.py  types.py
immunosense/agents/environment/: __init__.py  agent.py  detector.py  norms.py  pipeline.py  thresholds.py  trackers.py  types.py
immunosense/agents/symptoms_mood/: __init__.py  agent.py  detector.py  jepa_emit.py  memory.py  nhanes.py  norms.py  pipeline.py  thresholds.py  trackers.py  types.py  wellness.py
immunosense/agents/wearable/: __init__.py  agent.py  alerts.py  hrv.py  pattern.py  pipeline.py  preprocessing.py  sleep.py  states.py  stress.py  tadi.py  types.py
immunosense/conductor/: __init__.py  conductor.py
immunosense/conductor/calibration/: __init__.py  likelihood_ratios.py
immunosense/conductor/decision/: __init__.py  (+1 more)
immunosense/events/: __init__.py  bucket.py  event_log.py  types.py
immunosense/inference/: __init__.py  patient_day_embedding.py
immunosense/knowledge/: __init__.py  base.py
immunosense/tfm/: __init__.py  base.py  claude_tfm.py  local_llm_tfm.py  mock_tfm.py
migrated_notebooks/: 01_Biomarker_Agent.ipynb
notebooks/: 01_Biomarker_Exploration.ipynb  02_Dietary_Agent.ipynb  02_Dietrary_Exploration.ipynb  03_Environment_Agent.ipynb  04_Wearable_Agent.ipynb  05_Symptoms_Mood_Agent.ipynb  06_Conductor.ipynb  07_Inference.ipynb
server/: README.md  SECURITY.md  requirements.txt
server/api/: README.md  __init__.py  app.py  auth.py  config.py  deps.py  geocode.py  hardening.py  routes.py  schemas.py  service.py  tracelog.py
server/builders/: README.md  __init__.py  biomarker_builder.py  dietary_builder.py  environment_builder.py  symptom_builder.py
server/db/: __init__.py  base.py  event_store.py  models.py  seed.py  types.py  user_context.py
server/scheduler/: README.md  __init__.py  runner.py  timezones.py
server/tests/: conftest.py  test_api.py  test_builders.py  test_environment_wiring.py  test_event_store.py  test_hardening.py  test_models_and_seed.py  test_rls_isolation.py  test_scheduler.py  test_security.py  test_user_context.py
tests/adapters/: test_adapters.py
tests/agents/: test_base.py  test_cross_agent.py
tests/conductor/: conftest.py  test_conductor.py  test_corroboration.py  test_fusion.py  test_quality.py  test_risk_decision.py  test_sprint6_integration.py
tests/events/: test_bucket.py  test_event_log.py  test_types.py
tests/inference/: test_patient_day_embedding.py
tests/knowledge/: test_kb.py
tests/tfm/: test_tfm.py
web/: .env.example  CHANGES_v2.md  CHANGES_v3.md  CHANGES_v4.md  CHANGES_v5.md  CHANGES_v6.md  CHANGES_v7.md  CHANGES_v8.md  CHANGES_v9.md  README.md  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo
web/src/: App.tsx  styles.css  vite-env.d.ts
(+109 files in other folders)
