[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "immunosense"
version = "0.1.0"
description = "Multi-agent autoimmune flare prediction system"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Proprietary" }
authors = [
    { name = "ImmunoSense Team" },
]
keywords = ["autoimmune", "flare-prediction", "healthcare", "multi-agent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Healthcare Industry",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]

# Core dependencies — needed by every agent
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scipy>=1.10",
    "python-dateutil>=2.8",
]

[project.optional-dependencies]
# Per-agent optional dependencies
biomarker = [
    "lightgbm>=4.0",
    "xgboost>=2.0",
    "shap>=0.43",
    "torch>=2.0",
    "scikit-learn>=1.3",
    "openpyxl>=3.1",  # for Rheumatic .xlsx
]

dietary = [
    "lightgbm>=4.0",
    "rapidfuzz>=3.0",
    "joblib>=1.3",
    "anthropic>=0.20",
    "scikit-learn>=1.3",
]

environment = [
    "requests>=2.31",
    "python-dotenv>=1.0",
]

wearable = [
    # scipy + numpy already core
]

symptoms = [
    "anthropic>=0.20",
    "pyreadstat>=1.2",  # for NHANES PHQ-8 XPT files
]

# Future components
mem0 = [
    "sentence-transformers>=2.2",
]

# All agents combined
agents-all = [
    "immunosense[biomarker,dietary,environment,wearable,symptoms]",
]

# Development tools
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "pytest-mock>=3.11",
    "pytest-json-report>=1.5",
    "hypothesis>=6.80",
    "ruff>=0.1",
    "mypy>=1.5",
    "ipykernel>=6.25",  # for notebooks to use venv
]

# Full development install (everything)
full = [
    "immunosense[agents-all,mem0,dev]",
]

[project.urls]
Homepage = "https://github.com/SambaSiva-S/ImmunoSense"
Repository = "https://github.com/SambaSiva-S/ImmunoSense"

# === setuptools configuration ===
[tool.setuptools.packages.find]
where = ["."]
include = ["immunosense*"]
exclude = ["tests*", "notebooks*", "audit*", "data*"]

[tool.setuptools.package-data]
immunosense = [
    "agents/biomarker/models/*",
    "agents/dietary/models/*",
    "agents/wearable/rules.yaml",
]

# === pytest configuration ===
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]
markers = [
    "unit: fast unit tests (< 1s each)",
    "integration: integration tests (< 30s each)",
    "contract: external API contract validation tests",
    "realtime: tests hitting live APIs (cost money/quota)",
    "regression: regression tests for specific past bugs",
    "property: Hypothesis-based property tests",
    "slow: long-running tests (skip in fast CI)",
]

# === ruff (linting/formatting) ===
[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line length (handled by formatter)
]

# === mypy (type checking) ===
[tool.mypy]
python_version = "3.10"
strict = false  # gradual typing
warn_unused_configs = true
ignore_missing_imports = true  # for libraries without stubs
